--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+New in version 0.2.1:
+Fixed ExtentStripeLengthDefault of RAID5 devices.
+Fixed partition creation with Anaconda 18.6.
+
 New in version 0.2:
 Use LMI_ prefix instead of Cura_.
 
