--- a/README
+++ b/README
@@ -22,8 +22,8 @@ Install cura-storage somewhere, using /usr/lib/python2.7/site-packages/cura/stor
     $ cp -r providers/* /usr/lib/python2.7/site-packages/cura/storage/
 
 Register python providers and MOF file:
-    $ vim mof/cura-storage.reg     # change the paths in the file
-    $ tools/register.sh register mof/cura-storage.mof mof/cura-storage.reg
+    $ vim mof/LMI_Storage.reg     # change the paths in the file
+    $ sfcbrepos mof/LMI_Storage.mof mof/LMI_Storage.reg
 
 
 Documentation
