Add initial implementation of the new API. Now every block device is represented only by LMI_StorageExtent. No pool is created for it. We assume, that CreateOrModifyElementFromElements is used for RAID creation.
In addition, device formats were added to the model.

--- a/README
+++ b/README
@@ -23,7 +23,7 @@ Install openlmi-storage somewhere, using /usr/lib/python2.7/site-packages/openlm
 
 Register python providers and MOF file:
     $ vim mof/LMI_Storage.reg     # change the paths in the file
-    $ sfcbrepos mof/LMI_Storage.mof mof/LMI_Storage.reg
+    $ sfcbrepos mof/*.mof mof/LMI_Storage.reg
 
 
 Documentation
