--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 New in version 0.5.0:
 New and backward-incompatible storage model.
+Check documentation for details.
 
 New in version 0.4:
 Rename Cura to OpenLMI.
