--- a/README
+++ b/README
@@ -45,3 +45,6 @@ Mailing list: OpenLMI-devel [at] lists.fedorahosted.org
 Bugs: use Fedora bugzilla at https://bugzilla.redhat.com
   Use Fedora as Product and OpenLMI-storage as component
   New bug: https://bugzilla.redhat.com/enter_bug.cgi?format=guided&product=Fedora&component=openlmi-storage
+
+
+Adding a bunch of useless text
